se agrega el proyecto

--- a/Documents/CURSO DE HTML Y CSS/trabajo de css/index2.html
+++ b/Documents/CURSO DE HTML Y CSS/trabajo de css/index2.html
@@ -8,19 +8,20 @@
 </head>
 <body>
 
-<h1>hola 1</h1>
+<header>
 
+    <div class="logo">
+        <img width="170px" heigth="100px" src="img2/logoalarmas.jpg">
+        
+</div>
 
-
-</body>
-
-
-
-<ul>
-    <li>
+    
+    <nav class="nav">
         <a href="index.html">inicio</a>
         <a href="index2.html">servicios</a>
         <a href="index3.html">productos</a>
         <a href="index4.html">contactanos</a>
-    </li>
-</ul>
+    </nav>
+</header>
+<h1>hola mundo1</h1>
+</body>
