--- a/Documents/CURSO DE HTML Y CSS/trabajo de css/index4.html
+++ b/Documents/CURSO DE HTML Y CSS/trabajo de css/index4.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title> trabajo E2</title>
+<title> Connan Alarmas</title>
 <link rel="stylesheet" href="style.css" />
 
 </head>
