se agrega el proyeto

--- a/Documents/CURSO DE HTML Y CSS/trabajo de css/index2.html
+++ b/Documents/CURSO DE HTML Y CSS/trabajo de css/index2.html
@@ -11,7 +11,7 @@
 <header>
 
     <div class="logo">
-        <img width="170px" heigth="100px" src="img2/logoalarmas.jpg">
+        <img width="170px" heigth="100px" src="img2/logo-05alarmas.png">
         
 </div>
 
@@ -24,4 +24,5 @@
     </nav>
 </header>
 <h1>hola mundo1</h1>
+<img src="img2/doctorlogo.png" alt="">
 </body>
