--- a/Documents/CURSO DE HTML Y CSS/trabajo de css/index3.html
+++ b/Documents/CURSO DE HTML Y CSS/trabajo de css/index3.html
@@ -11,7 +11,7 @@
     <header>
 
         <div class="logo">
-            <img width="170px" heigth="100px" src="img2/logoalarmas.jpg">
+            <img width="170px" heigth="100px" src="img2/logo-05alarmas.png">
             
     </div>
     
