--- a/Documents/CURSO DE HTML Y CSS/trabajo de css/index.html
+++ b/Documents/CURSO DE HTML Y CSS/trabajo de css/index.html
@@ -20,7 +20,7 @@
             <a href="index.html">inicio</a>
             <a href="index2.html">servicios</a>
             <a href="index3.html">productos</a>
-            <a href="index4.html">contactanos</a>
+            <a href="index4.html">contáctanos</a>
         </nav>
     </header>
 
@@ -59,7 +59,7 @@
                <li>Gps</li>    
                 <li>Transceiver</li> 
                 <li> Tranca-palancas </li>
-                 <li> Bovedas  </li>
+                 <li> Bóvedas  </li>
                   <li>  Autoperiquitos  </li>          
                    <li>  Sonido</li>    
              <li>  Papel-Ahumado</li>  
@@ -67,6 +67,20 @@
     </ul>
         
     </aside>
+
+    <div class="benefit">
+        <div>
+            <p class="p">tenemos los mejores equipos del mercado, traídos de china directamente</p>
+        </div>
+        <div>
+            <p class="p">poseemos el mejor servicio de instalaciòn para todos los equipos y modelos de carros</p>
+        </div>
+        <div>
+            <p class="p">los mejores precios, atendido por sus propios dueños</p>
+        </div>
+
+    </div>
+
 
 
     
