--- a/Documents/CURSO DE HTML Y CSS/trabajo de css/index4.html
+++ b/Documents/CURSO DE HTML Y CSS/trabajo de css/index4.html
@@ -21,7 +21,7 @@
             <a href="index.html">inicio</a>
             <a href="index2.html">servicios</a>
             <a href="index3.html">productos</a>
-            <a href="index4.html">contactanos</a>
+            <a href="index4.html">contáctanos</a>
         </nav>
     </header>
 </body>
@@ -35,10 +35,13 @@
     <a href="https://www.instagram.com/enocquintero86/" class="btn">
         <i class="fa-brands fa-instagram"></i>
     </a>
+    <a href="https://wa.me/+584164573268" class="btn">
+        <i class="fa-brands fa-whatsapp"></i>  
+    </a>
 
 </div>
 <hr>
-<h1>Ubicacion:</h1>
+<h1>Ubicación:</h1>
 <h3>calle 29 entre 32 y 33</h3>
 <h3>Barquisimeto edo Lara Venezuela</h3>
 <div class="mapa"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d811.9902851750342!2d-69.32045596784104!3d10.079183907469371!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e8767a7ab841449%3A0x65c7d3129b312aa7!2zMTDCsDA0JzQ0LjgiTiA2OcKwMTknMTUuMiJX!5e1!3m2!1ses!2sve!4v1664008460368!5m2!1ses!2sve" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
