--- a/Documents/CURSO DE HTML Y CSS/trabajo de css/index.html
+++ b/Documents/CURSO DE HTML Y CSS/trabajo de css/index.html
@@ -73,7 +73,7 @@
             <p class="p">tenemos los mejores equipos del mercado, traídos de china directamente</p>
         </div>
         <div>
-            <p class="p">poseemos el mejor servicio de instalaciòn para todos los equipos y modelos de carros</p>
+            <p class="p">poseemos el mejor servicio de instalación para todos los equipos y modelos de carros</p>
         </div>
         <div>
             <p class="p">los mejores precios, atendido por sus propios dueños</p>
