--- a/Documents/practica html y css/index2.html
+++ b/Documents/practica html y css/index2.html
@@ -1,10 +1,11 @@
+
 !<!DOCTYPE html>
 <html lang="es">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Connan Gym</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Connan Gym</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +23,7 @@
 <body>
     <header>
     <div class="logo">
-        <img src="img3/gymlogo-png.webp">
+        <img src="img/gymlogo-png.webp">
     </div>
     <nav>
         <label for="menu-toggle">
@@ -45,30 +46,30 @@
 <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="img3/basico.jpg" />
+        <img src="img/basico.jpg" />
         <h3>Plan basico</h3>
         <p class="flip-texto">Acceso a todas nuestras áreas de pesas y máquinas, entrenadores generales, baños y lockers, abierto las 24 horas </p>
       </div>
       <div class="flip-card-back">
-        <img src="img3/basico2.jpg" />
+        <img src="img/basico2.jpg" />
         <h3>Plan basico</h3>
         <h1>$ 20 p/p</h1>
       </div>
     </div>
   </div>
   <div class="separacion">
-    <img src="img3/gymlogo-png.webp">
+    <img src="img/gymlogo-png.webp">
     <p>Connan Gym</p>
-		</div>
+    </div>
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="img3/plus.jpg" />
+        <img src="img/plus.jpg" />
         <h3>Plan plus</h3>
         <p class="flip-texto2">Acceso a todas las bondades del plan basico, entrenador personalizado, dieta personalizada por nutricionistas, acceso a las áreas de cardio, spinning, tae-bo, yoga y más</p>
       </div>
       <div class="flip-card-back">
-        <img src="img3/plus2.jpg" />
+        <img src="img/plus2.jpg" />
         <h3>Plan plus</h3>
         <h1>$ 30 p/p</h1>
       </div>
@@ -76,17 +77,17 @@
   </div>
   <div class="separacion">
     <p>Connan Gym</p>
-    <img src="img3/gymlogo-png.webp">
-		</div>
+    <img src="img/gymlogo-png.webp">
+    </div>
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="img3/vip.jpg" />
+        <img src="img/vip.jpg" />
         <h3>Plan vip</h3>
         <p class="flip-texto3">Acceso a todas las bondades del plan plus y ademas servicio a nuestras piscinas donde podras practicar natación, waterpolo y cardio acuatico </p>
       </div>
       <div class="flip-card-back">
-        <img src="img3/vip2.jpg" />
+        <img src="img/vip2.jpg" />
         <h3>Plan vip</h3>
         <h1>$ 40 p/p</h1>
       </div>
@@ -94,14 +95,14 @@
   </div>
   <footer id="footer">
     <div class="logo">
-        <img src="img3/gymlogo-png.webp">
+        <img src="img/gymlogo-png.webp">
     </div>
     <nav class="nav">
         <a href="index.html">inicio</a>
         <a href="index2.html">planes</a>
         <a href="index3.html">contactanos</a>
     </nav>
-</footer>	
+</footer> 
 
 
 
