--- a/Documents/practica html y css/index3.html
+++ b/Documents/practica html y css/index3.html
@@ -1,10 +1,11 @@
+
 !<!DOCTYPE html>
 <html lang="es">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Connan Gym</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Connan Gym</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
@@ -18,7 +19,7 @@
 <body>
     <header>
     <div class="logo">
-        <img src="img3/gymlogo-png.webp">
+        <img src="img/gymlogo-png.webp">
     </div>
     <nav>
         <label for="menu-toggle">
@@ -59,17 +60,15 @@
 </div>
 <footer id="footer">
     <div class="logo">
-        <img src="img3/gymlogo-png.webp">
+        <img src="img/gymlogo-png.webp">
     </div>
     <nav class="nav">
         <a href="index.html">inicio</a>
         <a href="index2.html">planes</a>
         <a href="index3.html">contactanos</a>
     </nav>
-</footer>	
+</footer>  
 </body>
 </html>
 
 
-
-    
