--- a/Music/practica html y css/index2.html
+++ b/Music/practica html y css/index2.html
@@ -1,5 +1,5 @@
 
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
@@ -14,7 +14,6 @@
       rel="stylesheet"
     />
 
-    <!-- Bootstrap Icons -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css"
@@ -26,37 +25,44 @@
         <img src="img/gymlogo-png.webp">
     </div>
     <nav>
-        <label for="menu-toggle">
-            <div class="menu-button">
-                <span></span>
-                <span></span>
-                <span></span>
+      <label for="menu-toggle">
+        <div class="menu-button">
+            <span></span>
+            <span></span>
+            <span></span>
 
-            </div>
-        </label>
-        <input type="checkbox" id="menu-toggle" class="menu-toggle"/>
-        <ul class="toggle">
-            <li><a href="index.html">inicio</a></li>
-            <li><a href="index2.html">planes</a></li>
-            <li><a href="index3.html">contactanos</a></li>
-        </ul>
+        </div>
+    </label>
+      <input type="checkbox" id="menu-toggle" class="menu-toggle"/>
+      <ul class="toggle">
+        <li><a href="index.html">inicio</a></li>
+        <li><a href="index2.html">planes</a></li>
+        <li><a href="index3.html">contáctanos</a></li>
+        <li><a href="index4.html">login</a></li>
+        <li><a href="index5.html">registro</a></li>
+      </ul>
 
-    </nav>
+  </nav>
 </header>
 <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <img src="img/basico.jpg" />
         <h3>Plan basico</h3>
-        <p class="flip-texto">Acceso a todas nuestras áreas de pesas y máquinas, entrenadores generales, baños y lockers, abierto las 24 horas </p>
+        <p class="flip-texto">Acceso a todas nuestras áreas de pesas y máquinas, entrenadores generales, baños y lockers; abierto las 24 horas </p>
       </div>
       <div class="flip-card-back">
         <img src="img/basico2.jpg" />
         <h3>Plan basico</h3>
         <h1>$ 20 p/p</h1>
+        <div class="container-c">
+          <button>
+            <span class="span.1">Afíliate</span>
+          </button>
+        </div>
       </div>
     </div>
-  </div>
+  </div></div>
   <div class="separacion">
     <img src="img/gymlogo-png.webp">
     <p>Connan Gym</p>
@@ -72,9 +78,13 @@
         <img src="img/plus2.jpg" />
         <h3>Plan plus</h3>
         <h1>$ 30 p/p</h1>
+        <div class="container-c">
+          <button>
+            <span class="span.1">Afíliate</span>
+          </button>
       </div>
     </div>
-  </div>
+  </div></div>
   <div class="separacion">
     <p>Connan Gym</p>
     <img src="img/gymlogo-png.webp">
@@ -90,8 +100,13 @@
         <img src="img/vip2.jpg" />
         <h3>Plan vip</h3>
         <h1>$ 40 p/p</h1>
+        <div class="container-c">
+          <button>
+            <span class="span.1">Afíliate</span>
+          </button>
       </div>
     </div>
+  </div></div> 
   </div>
   <footer id="footer">
     <div class="logo">
@@ -100,7 +115,7 @@
     <nav class="nav">
         <a href="index.html">inicio</a>
         <a href="index2.html">planes</a>
-        <a href="index3.html">contactanos</a>
+        <a href="index3.html">contáctanos</a>
     </nav>
 </footer> 
 
