--- a/Music/practica html y css/index3.html
+++ b/Music/practica html y css/index3.html
@@ -1,5 +1,4 @@
-
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -34,7 +33,9 @@
         <ul class="toggle">
             <li><a href="index.html">inicio</a></li>
             <li><a href="index2.html">planes</a></li>
-            <li><a href="index3.html">contactanos</a></li>
+            <li><a href="index3.html">contáctanos</a></li>
+            <li><a href="index4.html">login</a></li>
+            <li><a href="index5.html">registro</a></li>
         </ul>
 
     </nav>
@@ -65,7 +66,7 @@
     <nav class="nav">
         <a href="index.html">inicio</a>
         <a href="index2.html">planes</a>
-        <a href="index3.html">contactanos</a>
+        <a href="index3.html">contáctanos</a>
     </nav>
 </footer>  
 </body>
