--- a/Music/practica html y css/practica javascript/index2.html
+++ b/Music/practica html y css/practica javascript/index2.html
@@ -33,7 +33,7 @@
             <input type="checkbox" id="menu-toggle" class="menu-toggle"/>
             <ul class="toggle">
               <li><a href="index.html">inicio</a></li>
-              <li><a href="index2.html">planes</a></li>
+              <li><a href="index2.html">deseos</a></li>
             
             </ul>
     
